99-deployments/obsoleted/kafka/templates/kafka-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /tools/kafka-ui
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  number: 80
